# shader_test_cpp

./: CMakeLists.txt  CommonVariables.cmake  README.md  render_text_positions_renderdoc.csv
assets/shaders/: basic.frag  basic.vert  sdf.frag  text.frag  text.gs  text.vert
include/: Shader.hpp  filepath.hpp  setup_window.hpp  stb_rect_pack.h  stb_truetype.h
include/Events/: CameraEvents.hpp
include/cameras/: Camera.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp
include/core/: EventDispatcher.hpp  Face3.hpp  Layers.hpp  Raycaster.hpp
include/math/: Box3.hpp  Color.hpp  Euler.hpp  Line3.hpp  MathUtils.hpp  Matrix3.hpp  Matrix4.hpp  Plane.hpp  Quaternion.hpp  Ray.hpp  Spherical.hpp  Triangle.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  float_view.hpp  infinity.hpp
include/objects/: Object3D.hpp
include/objects/Label/: LabelShader.hpp  helpers.hpp
src/: Shader.cpp  main.cpp  setup_window.cpp
src/Events/: CameraEvents.cpp
src/cameras/: Camera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
src/core/: EventDispatcher.cpp  Layers.cpp  Raycaster.cpp
src/math/: Box3.cpp  Color.cpp  Euler.cpp  Line3.cpp  MathUtils.cpp  Matrix3.cpp  Matrix4.cpp  Plane.cpp  Quaternion.cpp  Ray.cpp  Spherical.cpp  Triangle.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/objects/: Object3D.cpp
src/objects/Label/: LabelShader.cpp  helpers.cpp
